--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": "@igus-accelerator-injection-molding-configurator/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:frontend": "nx serve frontend",
+    "build:frontend": "nx build frontend",
+    "start:backend": "nx serve backend",
+    "build:backend": "nx build backend",
+    "test:frontend": " nx test iaimc-frontend",
+    "test:frontend-c": " nx test iaimc-frontend --coverage",
+    "test:backend": " nx test iaimc-backend",
+    "test:backend-c": " nx test iaimc-backend --coverage",
+    "test:all": "nx run-many --target=test --all"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~19.1.0",
