--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@angular-devkit/build-angular": "~19.1.0",
     "@angular-devkit/core": "~19.1.0",
     "@angular-devkit/schematics": "~19.1.0",
+    "@angular-eslint/eslint-plugin": "^19.1.0",
+    "@angular-eslint/eslint-plugin-template": "^19.1.0",
+    "@angular-eslint/template-parser": "^19.1.0",
     "@angular/cli": "~19.1.0",
     "@angular/compiler-cli": "~19.1.0",
     "@angular/language-service": "~19.1.0",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nrwl/eslint-plugin-nx": "^19.8.4",
     "@nrwl/nest": "^19.8.4",
     "@nx/angular": "20.4.4",
     "@nx/eslint": "20.4.4",
@@ -50,16 +54,18 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.0.2",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.4.4",
-    "prettier": "^2.6.2",
+    "prettier": "^3.5.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
