--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "prepare": "husky install",
     "lint": "nx run-many --target=lint",
     "lint:fix": "nx run-many --target=lint -- --fix"
   },
@@ -63,6 +64,7 @@
     "angular-eslint": "^19.0.2",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
