feat(IAIMC-19): Implement contact form UI with validation and styling

--- a/apps/iaimc-frontend/tsconfig.editor.json
+++ b/apps/iaimc-frontend/tsconfig.editor.json
@@ -1,6 +1,10 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "contact-form.component.spec.ts",
+    "contact-form.component.ts"
+  ],
   "compilerOptions": {},
   "exclude": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
