chore(IAIMC-29): correctly ordered placement of coverage and nx cloud disabling flag

--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "start:backend": "nx serve backend",
     "build:backend": "nx build backend",
     "test:frontend": " nx test iaimc-frontend --no-cloud",
-    "test:frontend-c": " nx test iaimc-frontend --coverage --no-cloud",
+    "test:frontend-c": " nx test iaimc-frontend --no-cloud --coverage ",
     "test:backend": " nx test iaimc-backend --no-cloud",
-    "test:backend-c": " nx test iaimc-backend --coverage --no-cloud",
+    "test:backend-c": " nx test iaimc-backend --no-cloud --coverage ",
     "test:all": "nx run-many --target=test --no-cloud --all",
-    "test:all-c": "nx run-many --target=test --coverage --no-cloud --all",
+    "test:all-c": "nx run-many --target=test --no-cloud --coverage  --all",
     "render:build": "npx yarn install --frozen-lockfile --ignore-scripts && npx yarn nx build iaimc-backend --parallel=1 --skip-nx-cache"
   },
   "private": true,
