--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "lint:fix": "nx run-many --target=lint -- --fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "start:frontend": "nx serve frontend",
+    "start:frontend": "nx run frontend:lint && nx serve frontend",
     "build:frontend": "nx build frontend",
-    "start:backend": "nx serve backend",
+    "start:backend": "nx run backend:lint && nx serve backend",
     "build:backend": "nx build backend",
     "test:frontend": " nx test iaimc-frontend --no-cloud",
     "test:frontend-c": " nx test iaimc-frontend --coverage --no-cloud",
