--- a/nx.json
+++ b/nx.json
@@ -15,6 +15,7 @@
     ],
     "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml"]
   },
+  "neverConnectToCloud": true,
   "nxCloudId": "67b326638243ad48fd215b8d",
   "targetDefaults": {
     "@angular-devkit/build-angular:application": {
