--- a/nx.json
+++ b/nx.json
@@ -56,6 +56,10 @@
     "@nx/angular:component": {
       "style": "scss",
       "changeDetection": "OnPush"
+    },
+    "@nx/angular:library": {
+      "linter": "eslint",
+      "unitTestRunner": "jest"
     }
   },
   "plugins": [
