--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@angular/platform-browser": "~19.1.0",
     "@angular/platform-browser-dynamic": "~19.1.0",
     "@angular/router": "~19.1.0",
+    "@jsverse/transloco": "^7.5.1",
+    "@jsverse/transloco-locale": "^7.0.1",
+    "@jsverse/transloco-persist-lang": "^7.0.2",
+    "@jsverse/transloco-persist-translations": "^7.0.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.2",
