feat(frontend): update tsconfig.base.json

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,9 +2,11 @@
   "compileOnSave": false,
   "compilerOptions": {
     "strictNullChecks": true,
+    "allowSyntheticDefaultImports": true,
     "rootDir": ".",
     "sourceMap": true,
     "declaration": false,
+    "resolveJsonModule": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
