--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@igus-accelerator-injection-molding-configurator/ui-components": [
-        "libs/ui-components/src/index.ts"
-      ]
-    }
+    "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
 }
