--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,14 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@igus-accelerator-injection-molding-configurator/ui-components": [
+        "libs/ui-components/src/index.ts"
+      ],
+      "@igus-accelerator-injection-molding-configurator/ui-componentsclear": [
+        "libs/ui-componentsclear/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
