--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@ngrx/effects": "^19.0.1",
+    "@ngrx/entity": "^19.0.1",
+    "@ngrx/store": "^19.0.1",
     "axios": "^1.6.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.1.13",
