--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "three": "^0.173.0",
     "typeorm": "^0.3.20",
     "zone.js": "~0.15.0"
   },
