--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
-    "axios": "^1.6.0",
+    "axios": "^1.6.0",clea
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
