--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,32 @@ jobs:
       - name: run tests enforcing coverage threshold
         run: yarn test:all-c
 
-  deploy-frontend:
+  deploy-frontend-preview:
+    if: ${{ github.event_name == 'pull_request' }}
+    runs-on: ubuntu-latest
+    needs: pr-lints-and-code-quality-checks
+
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
+      - name: setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+          cache: 'yarn'
+      - name: install vercel cli
+        run: yarn global add vercel
+      - name: link vercel project
+        run: vercel link --yes --project preview-injection-moulding-configurator --token=${{ secrets.VERCEL_TOKEN }}
+      - name: pull vercel project settings
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+      - name: build project
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: deploy to vercel
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+  deploy-frontend-production:
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: pr-lints-and-code-quality-checks
 
@@ -54,10 +79,10 @@ jobs:
       - name: link vercel project
         run: vercel link --yes --project injection-moulding-configurator --token=${{ secrets.VERCEL_TOKEN }}
       - name: pull vercel project settings
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: build project
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      - name: deploy to vercel
+      - name: deploy to vercel (production)
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
 
   deploy-backend:
