--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,26 +4,17 @@ on:
   pull_request:
     branches:
       - main
-    types:
-      - opened
-      - edited
-      - synchronize
   push:
     branches:
       - main
 
 jobs:
-  pr-lints-and-code-quality-checks:
-    name: PR Lints and Code Quality Checks
+  code-quality-checks:
+    if: ${{ github.event_name == 'pull_request' }}
+    name: Code Quality Checks
     runs-on: ubuntu-latest
 
     steps:
-      - name: validate pr title
-        uses: seferov/pr-lint-action@master
-        with:
-          title-regex: '^(feat|fix|style|refactor|test)\((frontend|backend|config|pipeline)\): [a-z].+$|^(docs|chore): [a-z].+$'
-          title-regex-flags: 'g'
-          error-message: 'Refer to the confluence page for the rules on PR titles'
       - name: checkout repo
         uses: actions/checkout@v4
       - name: setup Node
@@ -43,7 +34,7 @@ jobs:
   deploy-frontend-preview:
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
-    needs: pr-lints-and-code-quality-checks
+    needs: code-quality-checks
 
     steps:
       - name: checkout repo
@@ -67,7 +58,6 @@ jobs:
   deploy-frontend-production:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
-    needs: pr-lints-and-code-quality-checks
 
     steps:
       - name: checkout repo
