--- a/apps/iaimc-frontend/tsconfig.editor.json
+++ b/apps/iaimc-frontend/tsconfig.editor.json
@@ -1,6 +1,9 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "../../libs/ui-components/src/shared-services/index.ts"
+  ],
   "compilerOptions": {},
   "exclude": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
