--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@ngrx-addons/persist-state": "^8.0.1",
     "@ngrx/component-store": "^19.0.0",
     "@ngrx/effects": "^19.0.0",
     "@ngrx/entity": "^19.0.0",
     "@ngrx/router-store": "^19.0.0",
     "@ngrx/store": "^19.0.0",
+    "@ngrx/store-devtools": "^19.0.1",
     "@types/three": "^0.174.0",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
