--- a/package.json
+++ b/package.json
@@ -43,6 +43,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@ngrx-addons/persist-state": "^8.0.1",
+    "@ngrx/component-store": "^19.0.0",
+    "@ngrx/effects": "^19.0.0",
+    "@ngrx/entity": "^19.0.0",
+    "@ngrx/router-store": "^19.0.0",
+    "@ngrx/store": "^19.0.0",
+    "@ngrx/store-devtools": "^19.0.1",
     "@types/three": "^0.174.0",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
@@ -68,6 +75,7 @@
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@ngrx/schematics": "^19.0.0",
     "@nrwl/eslint-plugin-nx": "^19.8.4",
     "@nrwl/nest": "^19.8.4",
     "@nx/angular": "20.4.6",
@@ -99,6 +107,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unicorn": "^57.0.0",
     "husky": "^9.1.7",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
