--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rxjs": "~7.8.0",
     "three": "^0.174.0",
     "typeorm": "^0.3.20",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
