chore: add workflow to ensure backend can successfully be built since preview deployments are disabled

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "prepare": "husky",
-    "build:frontend": "nx build frontend",
-    "build:backend": "nx build backend",
+    "build:frontend": "nx build frontend --no-cloud",
+    "build:backend": "nx build backend --no-cloud",
     "test:frontend": " nx test iaimc-frontend --no-cloud",
     "test:frontend-c": " nx test iaimc-frontend --no-cloud --coverage ",
     "test:backend": " nx test iaimc-backend --no-cloud",
