refactor(frontend): remove redundant imports and implement country selection logic

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "strictNullChecks": true,
+    "allowSyntheticDefaultImports": true,
     "rootDir": ".",
     "sourceMap": true,
     "declaration": false,
