feat(frontend): refactor and apply subscription to subscribed events

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "strictNullChecks": true,
-    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "rootDir": ".",
     "sourceMap": true,
     "declaration": false,
