--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,9 @@
       ],
       "@igus-accelerator-injection-molding-configurator/ui-components": [
         "libs/ui-components/src/index.ts"
+      ],
+      "@igus-accelerator-injection-molding-configurator/backend/types": [
+        "apps/iaimc-backend/src/app/common/types/index.ts"
       ]
     }
   },
