--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,8 +23,8 @@
       "@igus-accelerator-injection-molding-configurator/ui-components": [
         "libs/ui-components/src/index.ts"
       ],
-      "@igus-accelerator-injection-molding-configurator/shared-types": [
-        "libs/shared-types/src/index.ts"
+      "@igus-accelerator-injection-molding-configurator/libs/shared": [
+        "libs/shared/index.ts"
       ]
     }
   },
