--- a/libs/ui-components/tsconfig.lib.json
+++ b/libs/ui-components/tsconfig.lib.json
@@ -13,5 +13,9 @@
     "jest.config.ts",
     "src/**/*.test.ts"
   ],
-  "include": ["src/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../shared/services/__tests__/local-storage.service.spec.ts",
+    "../shared/services/local-storage.service.ts"
+  ]
 }
