--- a/libs/ui-components/tsconfig.spec.json
+++ b/libs/ui-components/tsconfig.spec.json
@@ -11,6 +11,7 @@
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "../shared/services/__tests__/local-storage.service.spec.ts"
   ]
 }
