--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,11 +20,11 @@
       "@igus-accelerator-injection-molding-configurator/services": [
         "apps/iaimc-frontend/src/app/services/index.ts"
       ],
-      "@igus-accelerator-injection-molding-configurator/shared-services": [
-        "apps/iaimc-backend/src/app/modules/shared-services/src/index.ts"
-      ],
       "@igus-accelerator-injection-molding-configurator/ui-components": [
         "libs/ui-components/src/index.ts"
+      ],
+      "@igus-accelerator-injection-molding-configurator/libs/shared": [
+        "libs/shared/index.ts"
       ]
     }
   },
