feat(backend): implement the backend for the subscribe

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@jsverse/transloco-locale": "^7.0.1",
     "@jsverse/transloco-persist-lang": "^7.0.2",
     "@jsverse/transloco-persist-translations": "^7.0.1",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.0",
@@ -63,6 +64,7 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
+    "nodemailer": "^6.10.0",
     "papaparse": "^5.5.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -109,6 +111,7 @@
     "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.12",
     "@types/node": "18.16.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.15",
     "@types/passport-jwt": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
