--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "ng-mocks": "^14.13.4",
     "nx": "20.4.6",
     "prettier": "^3.5.1",
     "ts-jest": "^29.1.0",
