--- a/apps/iaimc-backend/tsconfig.spec.json
+++ b/apps/iaimc-backend/tsconfig.spec.json
@@ -3,7 +3,19 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "paths": {
+      "@igus-accelerator-injection-molding-configurator/services": [
+        "apps/iaimc-frontend/src/app/services/index.ts"
+      ],
+      "@igus-accelerator-injection-molding-configurator/libs/shared": [
+        "libs/shared/src/index.ts"
+      ],
+      "@igus-accelerator-injection-molding-configurator/ui-components": [
+        "libs/ui-components/src/index.ts"
+      ]
+    },
+    "allowJs": true
   },
   "include": [
     "jest.config.ts",
