--- a/libs/shared/tsconfig.spec.json
+++ b/libs/shared/tsconfig.spec.json
@@ -1,10 +1,11 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
     "target": "ES2022",
     "types": ["jest", "node"],
+    "allowJs": true,
     "paths": {
       "@igus-accelerator-injection-molding-configurator/services": [
         "apps/iaimc-frontend/src/app/services/index.ts"
