--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,22 +10,23 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
-    "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "target": "ES2022",
+    "module": "ES2022",
+    "lib": ["ES2022", "dom"],
+    "isolatedModules": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@igus-accelerator-injection-molding-configurator/libs/shared": [
-        "libs/shared/index.ts"
-      ],
       "@igus-accelerator-injection-molding-configurator/services": [
         "apps/iaimc-frontend/src/app/services/index.ts"
       ],
+      "@igus-accelerator-injection-molding-configurator/libs/shared": [
+        "libs/shared/src/index.ts"
+      ],
       "@igus-accelerator-injection-molding-configurator/ui-components": [
         "libs/ui-components/src/index.ts"
-      ],
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
